opam-version: "1.2"
name: "daoism-world"
version: "dev"
authors: "Xin Gao"
maintainer: "Xin Gao"
license: "ISC"

available: [
  ocaml-version >= "4.02.0"
]

build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
depends: [
  "hex" {test & >= "1.2.0"}
]
